<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="amendments">Amendments</string>
    <string name="app_name">OpenHDS Mobile</string>
    <string name="bad_authentication">Authentication Failed</string>
    <string name="bad_xml">Error parsing XML</string>
    <string name="changePassword">Change Password</string>
    <string name="changeServer">Change Server</string>
    <string name="changeUsername">Change Username</string>
    <string name="configuration">Configuration</string>
    <string name="configureDatabase">Configure Database</string>
    <string name="databaseSync">Sync with OpenHDS Database</string>
    <string name="default_server_url">http://openhds.rcg.usm.maine.edu/mobile-interop</string>
    <string name="default_openhdsserver">http://openhds.rcg.usm.maine.edu/openhds</string>
    <string name="delete_form_btn">Delete Form</string>
    <string name="download_form_button">Download Forms</string>
    <string name="failure_reasons_txt">Failure messages:</string>
    <string name="fatherNotFound">A father could not be found</string>
    <string name="field_worker_already_exists">Field Worker already exists</string>
    <string name="field_worker_created">Field Worker Successfully Created</string>
    <string name="form_status">Form Status:</string>
    <string name="form_view_lbl">Form View</string>
    <string name="hello">Hello, Android!</string>
    <string name="household_not_found">A household was not found for this Individual</string>
    <string name="idGenerationFailure">An error occurred while generating an id</string>
    <string name="location_lbl">Location:</string>
    <string name="login_btn">Login</string>
    <string name="logout_btn">Logout</string>
    <string name="main_txt">Form Management</string>
    <string name="openhdswebservice">OpenHDS Web Service</string>
    <string name="owner_txt">Form Owner Id:</string>
    <string name="password">OpenHDS Password</string>
    <string name="retrieving_fieldworkers_interrupted">Retrieving Field Workers has been interrupted</string>
    <string name="send_to_odk_btn">Edit in ODK</string>
    <string name="shared_pref_file_name">server_prefs</string>
    <string name="shared_pref_server_url_key">server_url</string>
	<string name="syncDatabase">Sync Database</string>
	<string name="syncDatabaseMessage">This procedure will attempt to download OpenHDS entities onto the device. Please be patient while the download is in progress.</string>
	<string name="sync_entities_failure">Failed to Collect OpenHDS Entities</string>
	<string name="sync_entities_successful">OpenHDS Entities Collected Successfully</string>
    <string name="sync_interrupted">Collecting OpenHDS Entities has been interrupted</string>
    <string name="sync_restarting">Sync restarting</string>
    <string name="unable_to_connect">Unable to connect</string>
    <string name="url_error">Sorry, invalid URL!</string>
    <string name="update">Update</string>
    <string name="username">OpenHDS Username</string>
    <string name="view_forms_btn">View My Forms</string>
	<string name="see_list">See List</string>
    <string name="hierarchy1_lbl">District:</string>
    <string name="hierarchy1_hint_lbl">District External Id</string>
    <string name="hierarchy2_lbl">Village:</string>
    <string name="hierarchy2_hint_lbl">Village External Id</string>
    <string name="hierarchy3_lbl">Subvillage:</string>
    <string name="hierarchy3_hint_lbl">Subvillage External Id</string>
    <string name="hierarchy4_lbl">Parent Location:</string>
    <string name="hierarchy4_hint_lbl">Parent Location External Id</string>
    <string name="hierarchy5_lbl">District:</string>
    <string name="hierarchy5_hint_lbl">District External Id</string>
    <string name="hierarchy6_lbl">District:</string>
    <string name="hierarchy6_hint_lbl">District External Id</string>
    <string name="hierarchy7_lbl">District:</string>
    <string name="hierarchy7_hint_lbl">District External Id</string>
    <string name="hierarchy8_lbl">District:</string>
    <string name="hierarchy8_hint_lbl">District External Id</string>
    <string name="hierarchy9_lbl">District:</string>
    <string name="hierarchy9_hint_lbl">District External Id</string>
    <string name="location_hint_lbl">Location External Id</string>
    <string name="firstname_lbl">First Name:</string>
    <string name="firstname_hint_lbl">First Name</string>
    <string name="lastname_lbl">Last Name:</string>
    <string name="lastname_hint_lbl">Last Name</string>
    <string name="gender_lbl">Gender:</string>
    <string name="male_lbl">Male</string>
    <string name="female_lbl">Female</string>
    <string name="clear_lbl">Clear</string>
    <string name="search_lbl">Search</string>
    <string name="search_individual_lbl">Search for an Individual</string>
    
    	<!-- New hierarchy strings -->
	<string name="configureHierarchies">Configure Hierarchies</string>
	<string name="default_hierarchy1">Hierarchy 1</string>
    <string name="default_hierarchy2">Hierarchy 2</string>
    <string name="default_hierarchy3">Hierarchy 3</string>
    <string name="default_hierarchy4">Hierarchy 4</string>
    <string name="default_hierarchy5">Hierarchy 5</string>
    <string name="default_hierarchy6">Hierarchy 6</string>
    <string name="default_hierarchy7">Hierarchy 7</string>
    <string name="default_hierarchy8">Hierarchy 8</string>
    <string name="default_hierarchy9">Hierarchy 9</string>
	<string name="hierarchy_error">Sorry, invalid hierarchy!</string>
	<string name="num_hierarchy_error">Sorry, invalid number entered for hierarchy!</string>
    <string name="hierarchy1Title">Hierarchy 1</string>
    <string name="hierarchy2Title">Hierarchy 2</string>
    <string name="hierarchy3Title">Hierarchy 3</string>
    <string name="hierarchy4Title">Hierarchy 4</string>
    <string name="hierarchy5Title">Hierarchy 5</string>
    <string name="hierarchy6Title">Hierarchy 6</string>
    <string name="hierarchy7Title">Hierarchy 7</string>
    <string name="hierarchy8Title">Hierarchy 8</string>
    <string name="hierarchy9Title">Hierarchy 9</string>
    <string name="changeHierarchy">Change Hierarchy</string>
    <string name="numHierarchiesTitle">Number of Hierarchies</string>
    <string name="changeNumHierarchy">Change Number of Hierarchies</string>
</resources>