<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

     <EditTextPreference
    		android:id="@+id/numHierarchies"
            android:key="numHierarchies"
            android:defaultValue="@integer/default_numHierarchies"
            android:title="@string/numHierarchiesTitle"
            android:dialogTitle="@string/changeNumHierarchy" />
     
     <EditTextPreference
    		android:id="@+id/hierarchy1"
            android:key="hierarchy1"
            android:defaultValue="@string/default_hierarchy1"
            android:title="@string/hierarchy1Title"
            android:dialogTitle="@string/changeHierarchy" />
     
     <EditTextPreference
    		android:id="@+id/hierarchy2"
            android:key="hierarchy2"
            android:defaultValue="@string/default_hierarchy2"
            android:title="@string/hierarchy2Title"
            android:dialogTitle="@string/changeHierarchy" />
            
     <EditTextPreference
    		android:id="@+id/hierarchy3"
            android:key="hierarchy3"
            android:defaultValue="@string/default_hierarchy3"
            android:title="@string/hierarchy3Title"
            android:dialogTitle="@string/changeHierarchy" />
            
     <EditTextPreference
    		android:id="@+id/hierarchy4"
            android:key="hierarchy4"
            android:defaultValue="@string/default_hierarchy4"
            android:title="@string/hierarchy4Title"
            android:dialogTitle="@string/changeHierarchy" />
     
     <EditTextPreference
    		android:id="@+id/hierarchy5"
            android:key="hierarchy5"
            android:defaultValue="@string/default_hierarchy4"
            android:title="@string/hierarchy5Title"
            android:dialogTitle="@string/changeHierarchy" />
     
     <EditTextPreference
    		android:id="@+id/hierarchy6"
            android:key="hierarchy6"
            android:defaultValue="@string/default_hierarchy6"
            android:title="@string/hierarchy6Title"
            android:dialogTitle="@string/changeHierarchy" />
     
     <EditTextPreference
    		android:id="@+id/hierarchy7"
            android:key="hierarchy7"
            android:defaultValue="@string/default_hierarchy7"
            android:title="@string/hierarchy7Title"
            android:dialogTitle="@string/changeHierarchy" />
     
     <EditTextPreference
    		android:id="@+id/hierarchy8"
            android:key="hierarchy8"
            android:defaultValue="@string/default_hierarchy4"
            android:title="@string/hierarchy8Title"
            android:dialogTitle="@string/changeHierarchy" />
     
     <EditTextPreference
    		android:id="@+id/hierarchy9"
            android:key="hierarchy9"
            android:defaultValue="@string/default_hierarchy4"
            android:title="@string/hierarchy9Title"
            android:dialogTitle="@string/changeHierarchy" />

</PreferenceScreen>